--- a/Warestyle.css
+++ b/Warestyle.css
@@ -1,9 +1,19 @@
-main{
-  width: 50%;
-  margin: 50px auto;
+body{
+  background-color:#add8e6;
+
+}
+
+header{
+   background-color: #417dc1;
+   color: #black;
+   line-height: 300%;
+   text-indent: 1em;
+   width: 50%;
+   margin: 50px auto;
 }
 table{
   margin: 50px auto;
+  background-color: #white;
 }
 table, th, td{
   border-collapse: collapse;
